경기장 완성, 문의리팩토링